<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/currency_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/currency_question"
        app:srcCompat="@drawable/ic_money" />

    <TextView
        android:id="@+id/currency_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pilih_mata_uang"
        app:layout_constraintStart_toEndOf="@+id/icon_money"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/currency_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:checkedButton="@id/option_euro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_question">

        <RadioButton
            android:id="@+id/option_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/option_us_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:buttonTint="#FF5722"
            android:text="@string/us_dollar" />

        <RadioButton
            android:id="@+id/option_japanese_yen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:text="@string/japanese_yen" />

        <RadioButton
            android:id="@+id/option_saudi_riyal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:text="@string/saudi_riyal" />

    </RadioGroup>

    <ImageView
        android:id="@+id/icon_close_fullscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/currency_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/currency_value"
        app:srcCompat="@drawable/ic_close_fullscreen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/nilai_mata_uang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_close_fullscreen"
        app:layout_constraintTop_toBottomOf="@id/currency_options">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nilai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/konversi_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:backgroundTint="#FF5722"
        android:text="@string/konversi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_value" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/konversi_button" />

</androidx.constraintlayout.widget.ConstraintLayout>